# E-commerce-Demand-Forecasting

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml
.devcontainer/: devcontainer.json
artifacts/: metrics_prophet_baseline.json  prophet_metrics_HOBBIES_1_178.json  prophet_multi_item_summary.json  summary_naive_baselines.json
artifacts/models/: prophet_model_params_HOBBIES_1_178.json
config/model/: nbeats_v1.yaml
docs/: ARCHITECTURE.md  PRODUCTION_READINESS.md
notebooks/: build_tracking.ipynb  data_prep.ipynb  data_processing.ipynb  data_quality.ipynb  nbeats_training.ipynb  prophet_baseline.ipynb
notebooks/artifacts/models/: nbeats_notebook_metrics.json
notebooks/lightning_logs/version_0/: events.out.tfevents.1762280057.Zaks-MacBook-Pro.local.70857.0  hparams.yaml
notebooks/lightning_logs/version_1/: events.out.tfevents.1762280381.Zaks-MacBook-Pro.local.70857.1
notebooks/lightning_logs/version_10/: events.out.tfevents.1762282941.Zaks-MacBook-Pro.local.79198.5
notebooks/lightning_logs/version_11/: events.out.tfevents.1762282988.Zaks-MacBook-Pro.local.79198.6
notebooks/lightning_logs/version_16/: hparams.yaml  (+1 more)
scripts/: train_nbeats.py
src/: __init__.py
src/evaluation/: backtest.py  baselines.py  metrics.py
src/features/: build_features.py
src/models/: baseline_prophet.py  nbeats_module.py  registry.py
src/service/: app.py
tests/: conftest.py  test_api_smoke.py  test_backtest.py  test_baselines.py  test_metrics_parametric.py  test_nbeats_forward.py
(+15 files in other folders)
